# tau-sdskv

./: CMakeLists.txt  COPYRIGHT  README.md
cmake/: Findargobots.cmake  Findmargo.cmake  Findsdskeyval.cmake  Findtau.cmake  Findunwind.cmake
control/: CMakeLists.txt
control/cmake/: version.hpp.in
control/include/tau-sdskeyval/: plugin.h
control/src/: lib.cpp
example/: CMakeLists.txt
example/src/: main.cpp
include/tau-sdskv/: control.h
internal/: margo.hpp  mercury.hpp  plugin.hpp  sdskv_client.hpp
plugin/: CMakeLists.txt
plugin/cmake/: version.cpp.in
plugin/include/tau-sdskeyval-plugin/: control.h
plugin/internal/: margo.hpp  mercury.hpp  plugin.hpp  sdskv_client.hpp
plugin/src/: lib.cpp  margo.cpp  mercury.cpp  plugin.cpp  sdskv_client.cpp
src/: lib.cpp  margo.cpp  mercury.cpp  plugin.cpp  sdskv_client.cpp
